fix model in yaml
